# kbuild-standalone

./: .gitignore  Makefile.am  Makefile.kconfig  Makefile.sample  README.md  SECURITY.md  configure.ac  kbuild-standalone.pc.in  sync_with_linux.sh
example/: Kconfig  Makefile  README.example.md
example/arch/: Kbuild
example/arch/arm/: Kconfig  Makefile
example/arch/arm/include/asm/: arch.h
example/arch/x86_64/: Kconfig  Makefile  arch.c
example/arch/x86_64/include/asm/: arch.h
example/kbuild/: Makefile.arch  Makefile.cflags  Makefile.head  Makefile.kconfig  Makefile.main  Makefile.prepare  link-kernel-exec.sh
example/kernel/: Kconfig  Makefile  main.c  opt0.c  opt1.c  opt2.c
example/kernel/include/kernel/: optimization.h
example/tools/: Kconfig
kbuild/: Makefile.env  Makefile.head  Makefile.include  Makefile.main  Makefile.output  _fixdep
kconfig/: parser.tab.c  parser.tab.h
unifdef/: Makefile
