# SPDX-License-Identifier: GPL-2.0
# Copyright (C) 2020,2021 Wang Nan <pi3orama@163.com>

# configure.ac for installing kbuild standalone
# We use autotools because autotools is well supported
# by yocto. We can also use cmake but I am not very
# familiar with it.

AC_INIT([kbuild-standalone],[5.16],[pi3orama@163.com])
AC_CONFIG_SRCDIR([Makefile.am])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT([kbuild-standalone.pc])
